jenkins-deployment.yaml
# https://kubernetes.io/ko/docs/concepts/scheduling-eviction/assign-pod-node/
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kt
  name: kt-api-server-deployment
  labels:
    app: kt-api-server
spec:
  selector:
    matchLabels:
      app: kt-api-server
  replicas: 2
  template:
    metadata:
      labels:
        app: kt-api-server
    spec:
      containers:
        - name: kt-api-server
          #image: harbor.k8s.io:30082/nlu_project/kt-api-server:latest
          image: harbor.k8s.io:30082/nlu_project/kt-api-server:${BUILD_NUMBER}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /service-api/logs
              name: service-api-volume
      volumes:
        - name: service-api-volume
          persistentVolumeClaim:
            claimName: service-api-pvc
#      nodeSelector:
#        key: worker
